fixes suggested by IDEA